--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); /* ヘッダーとトップバーの高さを考慮して調整 */
+  transform: translate(-50%, -50%); /* 中央配置 */
   text-align: center;
   font-size: 4em;
   color: #fff;
